--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body {
     background-color: black;
     
-}
+}j
 h1 {
     text-align: center;
     font-family:Helvetica;
     font-size: 50px;
+    color: beige;
 }
 .HeaderTwoColor {
     color: royalblue;
@@ -15,10 +16,11 @@ h1 {
 #ul
 {
     color:rgb(143, 253, 0)
+    
 }
 li 
 {
-    font-family: Haettenschweiler;
+    font-family: Lucida Sans;
     font-size: 15px;
     color:aliceblue
 }
