--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-    background-color: black;
+    backgrounde-color: red;
     
-}j
+}
 h1 {
     text-align: center;
     font-family:Helvetica;
@@ -16,7 +16,6 @@ h1 {
 #ul
 {
     color:rgb(143, 253, 0)
-    
 }
 li 
 {
