--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ li
 }
 #Statement
 {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 15px;
     color: forestgreen
-    font-family: Helvetica;
-    font-size: 17px;
+ 
 }
