--- a/style.css
+++ b/style.css
@@ -31,6 +31,6 @@ li
 {
     font-family: 'Times New Roman', Times, serif;
     font-size: 15px;
-    color: forestgreen
+    color: aquamarine
  
 }
