--- a/style.css
+++ b/style.css
@@ -42,3 +42,7 @@ padding: 40px 40px;
 background: rgb(75, 68, 68); /* pick a color */
 border-radius: 25%;
 }
+.HeaderThreeColor 
+{
+    color: red;
+}
