--- a/style.css
+++ b/style.css
@@ -35,13 +35,14 @@ li
  
 }
 .projects { display:flex; flex-wrap:wrap; } /* condensed to save space */
-.project {
-width: 40%;
-margin: 20px;
-padding: 40px 40px;
-background: rgb(75, 68, 68); /* pick a color */
-border-radius: 25%;
-}
+.project img{
+    width: 300px;
+    height: 300px;
+    margin: 10px;
+    border: 2px solid rgb(126, 14, 201); /* choose a color */
+    display: block;
+    margin: auto;
+    }
 .HeaderThreeColor 
 {
     color: red;
@@ -51,3 +52,4 @@ border-radius: 25%;
     width: 100%;
     height: 400px;
 }
+
