--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ li
 }
 .projects { display:flex; flex-wrap:wrap; } /* condensed to save space */
 .project img{
-    width: 300px;
-    height: 300px;
+    width: 100px;
+    height: auto;
     margin: 10px;
     border: 2px solid rgb(126, 14, 201); /* choose a color */
     display: block;
