--- a/style.css
+++ b/style.css
@@ -35,6 +35,13 @@ li
  
 }
 .projects { display:flex; flex-wrap:wrap; } /* condensed to save space */
+.project {
+    width: 30%;
+    margin: 10px;
+    padding: 20px 10px;
+    background: white; /* pick a color */
+    border-radius: 25%;
+}    
 .project img{
     width: 300px;
     height: 300px;
@@ -43,6 +50,7 @@ li
     display: block;
     margin: auto;
     }
+
 .HeaderThreeColor 
 {
     color: red;
