--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ li
 {
     font-family: 'Times New Roman', Times, serif;
     font-size: 15px;
-    color: aquamarine
+    color: blue;
  
 }
 .projects { display:flex; flex-wrap:wrap; } /* condensed to save space */
