--- a/style.css
+++ b/style.css
@@ -41,6 +41,9 @@ li
     padding: 20px 10px;
     background: white; /* pick a color */
     border-radius: 25%;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
 }    
 .project img{
     width: 300px;
@@ -68,7 +71,7 @@ li
     margin-left: 100px;
     justify-content: center;
     }
-    
+
 .about p {
     width:50%;
     text-align: center;
