--- a/style.css
+++ b/style.css
@@ -44,6 +44,8 @@ li
     text-align: center;
     flex-direction: column;
     align-items: center;
+    display: flex; 
+    box-sizing: border-box; 
 }    
 .project img{
     width: 300px;
