--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
 
 
   /* main site content */
-}
+/* }
 body {
   background-color: black;
 
@@ -50,7 +50,7 @@ h1 {
   font-size: 50px;
   color: beige;
 }
-/* Change this later */
+/* Change this later
 h2 {
   color: white;
 }
@@ -91,12 +91,12 @@ li
   color: blue;
 
 }
-.projects { display:flex; flex-wrap:wrap; } /* condensed to save space */
+.projects { display:flex; flex-wrap:wrap; } /* condensed to save space
 .project {
   width: 30%;
   margin: 10px;
   padding: 20px 10px;
-  background: white; /* pick a color */
+  background: white; /* pick a color
   border-radius: 25%;
   text-align: center;
   flex-direction: column;
@@ -108,7 +108,7 @@ li
   width: 300px;
   height: 300px;
   margin: 10px;
-  border: 2px solid rgb(126, 14, 201); /* choose a color */
+  border: 2px solid rgb(126, 14, 201); /* choose a color
   display: block;
   margin: auto;
 }
@@ -144,6 +144,11 @@ li
   border: 2px solid rgb(126, 14, 201);
 }
 
+  /*
+
+
+
+  /*-- revamp starts here ---*/
   *{
   margin: 0;
   padding: 0;
@@ -153,7 +158,7 @@ li
   min-height: 100vh;
   width: 100%;
     /* add a image below using a url() */
-  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7));
+  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(/Images/ComputerScience.png);
   background-position: center;
   background-size: cover;
   position: relative;
