--- a/style.css
+++ b/style.css
@@ -3,47 +3,57 @@
   *{
   margin: 0;
   padding: 0;
+  font-family: "Poppins", sans-serif;
   }
 
   .header {
   min-height: 100vh;
   width: 100%;
     /* add a image below using a url() */
-  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(/Images/ComputerScience.png);
+  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7));
   background-position: center;
   background-size: cover;
   position: relative;
   }
 
-  nav {
+  nav
+  {
   display: flex;
   padding: 2% 6%;
   justify-content: space-between;
   align-items: center;
   }
-  nav img {
+
+  nav img
+  {
     width: 150px;
   }
-  .nav-links {
+
+  .nav-links
+  {
     flex: 1;
     text-align: right;
   }
-  .nav-links ul li{
+
+  .nav-links ul li
+  {
     list-style: none;
     display: inline-block;
     padding: 8px 12px;
     position: relative;
   }
-  .nav-links ul li a{
+
+  .nav-links ul li a
+  {
     color: #fff;
     text-decoration: none;
     font-size: 13px;
   }
 
-  .nav-links ul li::after{
-
+  .nav-links ul li::after
+  {
     content: '';
-    width: 100%;
+    width: 0%;
     height: 2px;
     background: #f44336;
     display: block;
@@ -51,10 +61,13 @@
     transition: 0.5s;
   }
 
-  .nav-links ul li:hover::after {
+  .nav-links ul li:hover::after
+  {
     width: 100%;
   }
-  .text-box {
+
+  .text-box
+  {
     width: 90%;
     color: #fff;
     position: absolute;
@@ -75,6 +88,7 @@
     font-size: 14px;
     color: #fff;
   }
+
   .hero-btn
   {
     display: inline-block;
@@ -104,11 +118,14 @@
     {
           font-size: 20px;
     }
+
     .nav-links ul li
     {
           display: block;
     }
-    .nav-links{
+
+    .nav-links
+    {
       position: absolute;
       background: #f44336;
       height: 100vh;
@@ -119,28 +136,33 @@
       z-index: 2;
       transition: 1s;
     }
-    nav .fa{
+
+    nav .fa
+    {
       display: block;
       color: #fff;
       margin: 10px;
       font-size: 22px;
       cursor: pointer;
     }
+
     .nav-links ul
     {
       padding: 30px;
-
     }
 
     /*---- course ----*/
 
-    .course{
+    .course
+    {
       width: 80%;
       margin: auto;
       text-align: center;
       padding-top: 100px;
     }
-    h1 {
+
+    h1
+    {
       font-size: 36px;
       font-weight: 600;
     }
@@ -153,12 +175,15 @@
       padding: 10px;
     }
 
-    .row {
+    .row
+    {
       margin-top: 5%;
       display: flex;
       justify-content: space-between;
     }
-    .course-col{
+
+    .course-col
+    {
       flex-basis: 31%;
       background: #fff3f3;
       border-radius: 10px;
@@ -167,36 +192,46 @@
       box-sizing: border-box;
       transition: 0.5s;
     }
-    h3 {
+
+    h3
+    {
       text-align: center;
       font-weight: 600;
       margin: 10px 0;
     }
-    .course-col:hover{
+
+    .course-col:hover
+    {
       box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
     }
-    @media(max-width: 700px){
-      .row{
+
+    @media(max-width: 700px)
+    {
+      .row
+      {
         flex-direction: column;
       }
     }
 
-    /*---- campus ------ */
+    /*------ campus ------*/
 
-    .campus {
-      width: 80px;
+    .campus
+    {
+      width: 80%;
       margin: auto;
       text-center: center;
       padding-top: 50px;
     }
-    .campus-col {
+    .campus-col
+    {
       flex-basis: 32%;
       border-radius: 10px;
       margin-bottom: 30px;
       position: relative;
       overflow: hidden;
     }
-    .campus-col img{
+    .campus-col img
+    {
       width: 100%;
     }
     .layer{
@@ -208,10 +243,12 @@
       left: 0;
       transition: 0.5s;
     }
-    .layer:hover{
+    .layer:hover
+    {
       background: rgba(226,0,0,0.7);
     }
-    .layer h3{
+    .layer h3
+    {
       width: 100%;
       font-weight: 500;
       color: #fff;
@@ -223,7 +260,8 @@
       opacity: 0;
       transition: 0.5s;
     }
-    .layer:hover h3{
+    .layer:hover h3
+    {
       bottom: 49%;
       opacity: 1;
     }
@@ -258,13 +296,15 @@
 
     /*------ testimonials----*/
 
-    .testimonials{
+    .testimonials
+    {
       width: 80%;
       margin: auto;
       padding-top: 100px;
       text-align: center;
     }
-    .testimonial-col{
+    .testimonial-col
+    {
     flex-basis: 44%;
     border-radius: 10px;
     margin-bottom: 5%;
@@ -274,13 +314,15 @@
     cursor: pointer;
     display: flex;
      }
-    .textimonial-col img{
+    .textimonial-col img
+    {
       height: 40%;
       margin-left: 5px;
       margin-right: 30px;
       border-radius: 50%;
     }
-    .testimonial-col p{
+    .testimonial-col p
+    {
       padding: 0;
     }
     .testimonial-col h3
